fixed button wrapping issue

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
 	margin-right: 3em;
 	margin-top: 1.5em;
 	margin-bottom: 1.5em;
+    white-space: normal !important;
 }
 .addRep {
     padding-top: 30px;
